#
# Copyright (c) 2025 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: Apache-2.0
#
# Contributors:
#   ChenYing Kuo, <cy@zettascale.tech>
#
[package]
name = "rmw-zenoh-mcap-writer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive", "env"] }
futures = "0.3.26"
mcap = "0.23.4"
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", default-features = false } # Default features are disabled due to some crates' requirements
tracing = "0.1.41"
zenoh = { version = "1.6.2", features = [
  "plugins",
  "internal",
  "unstable",
  "shared-memory",
] }
zenoh-config = { version = "1.6.2", default-features = false  }
zenoh-plugin-rest = { version = "1.6.2", default-features = false, features = [
  "static_plugin",
]  }
zenoh-ext = { version = "1.6.2", default-features = false, features = [
  "unstable",
] }
once_cell = "1.21.3"
